--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,5 +14,8 @@
     "express": "^4.17.1",
     "puppeteer": "^9.0.0",
     "typeorm": "^0.2.32"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
